<resources>
    <string name="app_name">SubmissionThree</string>
    <string name="menu_1">Favorite</string>
    <string name="menu_2">Option</string>
    <string name="title">Welcome</string>
    <string name="description">Fian Ardi Saputra</string>
    <string name="send">Kirim</string>
    <string name="tab_text_1">%d Followers</string>
    <string name="tab_text_2">%d Following</string>
    <string name="find_user">Find User</string>
    <string name="title_activity_detail_user">Detail User</string>
    <string name="follow">Follow</string>
    <string name="share">Share</string>

    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu user berhasil ditambahkan ke favorit</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="unfollow">unfollow</string>
    <string name="failedadded">Item sudah ada</string>
</resources>